<resources>
    <string name="app_name">PortalSuitmedia</string>
    <string name="check_palindrome">CHECK</string>
    <string name="next_palindrome">NEXT</string>
    <string name="welcome">Welcome</string>
    <string name="name">John Doe</string>
    <string name="content">Selected User Name</string>
    <string name="choose_user">Choose a User</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="name_person">Name</string>
    <string name="email_person">Email</string>
    <string name="nameuser">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="retry">retry</string>
    <string name="user_name_format">%1$s %2$s</string>
</resources>